install/registry.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: container-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
  namespace: container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: cdkbot/registry-amd64:2.6
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/registry
            name: registry-data
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
  namespace: container-registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
  - name: "registry"
    port: 5000
    targetPort: 5000
    nodePort: 32000
